[gd_scene load_steps=3 format=3 uid="uid://ltkhxen8c2nm"]

[ext_resource type="Script" uid="uid://c3ekcycnagfkb" path="res://assets/ui/main_menu.gd" id="1_evy5u"]

[sub_resource type="LabelSettings" id="LabelSettings_026n6"]
font_size = 72
font_color = Color(1, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4.62, 4.695)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_evy5u")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 25

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -49.5
offset_right = 646.0
offset_bottom = 49.5
grow_vertical = 2
text = "BULBMIN NEO"
label_settings = SubResource("LabelSettings_026n6")

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -207.0
offset_top = -101.0
grow_horizontal = 0
grow_vertical = 0
vertical = true

[node name="NewGameButton" type="Button" parent="MarginContainer/Control/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MarginContainer/Control/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Game"

[node name="ResumeButton" type="Button" parent="MarginContainer/Control/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="MarginContainer/Control/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Settings"

[node name="QuitGameButton" type="Button" parent="MarginContainer/Control/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit Game"

[node name="QuitProgramButton" type="Button" parent="MarginContainer/Control/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit to Desktop"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 167.0
grow_vertical = 0

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/Control/PanelContainer"]
layout_mode = 2
vertical = true

[node name="VersionLabel" type="Label" parent="MarginContainer/Control/PanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Development Version"

[node name="Credits" type="Label" parent="MarginContainer/Control/PanelContainer/BoxContainer"]
layout_mode = 2
text = "Built on Godot 4.5"

[connection signal="pressed" from="MarginContainer/Control/BoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/Control/BoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/BoxContainer/QuitProgramButton" to="." method="_on_quit_button_pressed"]
